<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_refresh"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:showAsAction="always" />
    
    <item android:id="@+id/menu_report"
        android:title="@string/menu_report"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="0"
        android:showAsAction="always" />

    <item android:id="@+id/menu_preferences"
        android:title="@string/menu_preferences"
        android:icon="@drawable/ic_menu_share"
        android:orderInCategory="1"
        android:showAsAction="never" />
    
    <item android:id="@+id/menu_credits"
        android:title="@string/menu_credits"
        android:icon="@drawable/ic_menu_credits"
        android:orderInCategory="1"
        android:showAsAction="never" />
</menu>